Fixed layout issue between sign in and register and fixed button sizing issue on mobile.

--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -2,7 +2,7 @@ form {
     padding: 20px;
     background-color: white;
     border: 1px solid black;
-    margin: 150px auto 0 auto;
+    margin: 100px auto 0 auto;
     width: 500px;
 }
 
@@ -50,7 +50,14 @@ h1 {
 
 @media (max-width: 800px) {
     form {
-        margin-top: 120px;
         width: 100%;
+    }
+
+    .background {
+        height: 1100px;
+    }
+
+    button {
+        width: 100px;
     }
 }
