--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -2,7 +2,7 @@ form {
     padding: 20px;
     background-color: white;
     border: 1px solid black;
-    margin: 150px auto 0 auto;
+    margin: 100px auto 0 auto;
     width: 300px;
 }
 
@@ -20,7 +20,7 @@ form {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    height: 900px;
+    height: 800px;
 }
 
 h1 {
@@ -50,7 +50,11 @@ h1 {
 
 @media (max-width: 800px) {
     form {
-        margin-top: 120px;
+        margin-top: 100px;
         width: 100%;
+    }
+
+    button {
+        width: 100px;
     }
 }
